<resources>
    <!--<string name="app_name">drebedengi_my</string>-->
    <string name="app_name">Деньги</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="operations_tab">Ввод</string>
    <string name="history_tab">Жур.</string>
    <string name="balance_tab">Бал.</string>
    <string name="edit_categories_tab">Кат.</string>
    <string name="plan_tab">План</string>

    <string name="radio_spend">Расходы</string>
    <string name="radio_gain">Доходы</string>
    <string name="radio_move">Перемещ</string>
    <string name="radio_change">Обмены</string>
    <string name="radio_wallet">Места хранения</string>

    <string name="sum_hint"><font size = "18">Сумма</font></string>
    <string name="sell_hint"><font size = "18">Продали</font></string>
    <string name="buy_hint"><font size = "18">Купили</font></string>
    <string name="comment_hint">Комментарий</string>

    <string name="currency">Валюта</string>
    <string name="wallet">Место хранения</string>
    <string name="category">Категория затрат</string>
    <string name="source">Источник дохода</string>
    <string name="tag">Ещё</string>
    <string name="confirmButton">Сохранить</string>
    <string name="error_confirm_zero">Сумма должна быть больше 0</string>

    <string name="summary">Итого</string>

    <string name="deleteButton">Удалить</string>
    <string name="delete_message">Вы действительно хотите удалить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="record_deleted">Запись удалена</string>

    <string name="editButton">Редактировать</string>
    <string name="cancelButton">Отмена</string>

    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>

    <string name="dateLeft"><b>&lt;</b></string>
    <string name="dateRight"><b>&gt;</b></string>

    <string name="edit_cat_new">Создать новую категорию</string>
    <string name="edit_cat_edit">Изменить категорию</string>
    <string name="edit_cat_hint">Категория</string>
    <string name="edit_cat_remains">Начальная сумма:</string>
    <string name="message_edit_cat_new">Категория добавлена</string>
    <string name="message_edit_cat_edit">Категория изменена</string>
    <string name="message_edit_cat_edit_error">Введите имя категории!</string>

    <string name="radio_control">Контроль расходов</string>
    <string name="radio_plan">Планирование бюджета</string>

    <string name="budget_plan">План бюджета</string>
    <string name="edit_plan_message">Установить лимит:</string>
    <string name="plan">План</string>
    <string name="fact">Факт</string>
    <string name="edit_limit_message">Лимит установлен</string>
    <string name="plan_limit">Лимит-план</string>
    <string name="plan_remain">Осталось потратить</string>
    <string name="plan_already_spend">Потрачено</string>

    <string name="button_backup_table">Выгрузить БД</string>
    <string name="button_reload_table">Импорт БД</string>

    <!--<string name="currencies">Валюты</string>-->
    <!--<string name="wallets">Места хранения</string>-->
    <!--<string name="categories">Категории затрат</string>-->
    <!--<string name="tags">Ещё</string>-->
</resources>
