<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/editCategoriesTab"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ListView-->
        <!--android:id="@+id/lvHistory"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="5sp">-->
    <!--</ListView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5sp"
        android:background="@color/colorLayoutBack">

        <TextView
            android:id="@+id/textEditCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit_cat_edit"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/spinEditCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dialog" />

        <CheckBox
            android:id="@+id/chkEditCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit_cat_new"
            android:onClick="onEditLayoutButtonClick" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:hint="@string/edit_cat_hint"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirmButton"
            android:textAllCaps="false"
            android:onClick="onEditLayoutButtonClick" />

    </LinearLayout>
</LinearLayout>